# Aqua-mixtura

./: .clang-format  .clang-tidy  .gitignore  CHANGELOG.md  CMakeLists.txt  README.md
.github/workflows/: checks.yml  release.yml  winbuild.yml
defaults/: malts.json  settings.json  sources.json  styles.json
deploy/: CMakeLists.txt
deploy/archlinux/: PKGBUILD
deploy/linux/: aqua-mixtura.desktop
deploy/mac/: genMacIcon.sh
deploy/win/: genWinIcon.sh
doc/: Doxyfile  HOWTO.md  HOWTO_de.md
doc/additive/: Berechnung.md  c3h6o3.csv  c3h6o3.gnuplot  h2so4.csv  h2so4.gnuplot  h3po4.csv  h3po4.gnuplot  hcl.csv  hcl.gnuplot
pack/: CMakeLists.txt  app.rc  aqua-mixtura.desktop  genWinIcon.sh
src/: .gitignore  global.cpp  global.h  main.cpp  mainmodel.cpp  mainmodel.h  mainwindow.cpp  mainwindow.h  version.h.in
src/additive/: Berechnung.md  additive.cpp  additive.h  additivesettings.cpp  additivesettings.h  additivewindow.cpp  additivewindow.h
src/common/: buttons.cpp  buttons.h  dialogs.cpp  dialogs.h  download.cpp  download.h  global.h  jsonhelper.cpp  jsonhelper.h  meta.cpp  meta.h  paths.cpp  paths.h
src/icons/: README.md  icons.qrc  logo.xcf
src/limits/: limits.cpp  limits.h  limitswindow.cpp  limitswindow.h
src/malt/: malt.cpp  malt.h  maltphedit.cpp  maltphedit.h  malts.cpp  malts.h  malttabledelegate.cpp  malttabledelegate.h  maltwindow.cpp  maltwindow.h
src/mixture/: mixadditivewidget.cpp  mixadditivewidget.h  mixmaltwidget.cpp  mixmaltwidget.h  mixresultwidget.cpp  mixresultwidget.h  mixture.cpp  mixture.h  mixtures.cpp  mixtures.h  mixturewindow.cpp  mixturewindow.h  mixwaterwidget.cpp  mixwaterwidget.h  resultbar.cpp  resultbar.h
src/model/: additive.cpp  additive.h  jsonhelper.h  malt.cpp  malt.h  malts.cpp  malts.h  meta.cpp  meta.h  mixture.cpp  mixture.h  mixtures.cpp  style.cpp  style.h  styles.cpp  water.cpp  water.h  waterprofile.cpp  waterprofile.h  watersources.cpp  watersources.h
src/settings/: additivesettings.cpp  additivesettings.h  limits.cpp  limits.h  limitswindow.cpp  limitswindow.h  settings.cpp  settings.h  settingstabledelegate.cpp  settingstabledelegate.h  settingswindow.cpp  settingswindow.h
src/style/: style.cpp  style.h  styles.cpp  styles.h  styleswindow.cpp  styleswindow.h  styletabledelegate.cpp  styletabledelegate.h
src/view/: additivewindow.cpp  additivewindow.h  maltphedit.cpp  maltphedit.h  malttabledelegate.cpp  malttabledelegate.h  maltwindow.cpp  maltwindow.h  styleswindow.cpp  styletabledelegate.cpp  styletabledelegate.h  waterprofileedit.cpp  waterprofileedit.h  waterprofileview.cpp  waterprofileview.h  watersourcewindow.cpp  watersourcewindow.h
src/water/: water.cpp  water.h  waterprofileedit.cpp  waterprofileedit.h  waterprofileview.cpp  waterprofileview.h  watersources.cpp  watersources.h  watersourcestabledelegate.cpp  watersourcestabledelegate.h  watersourcewindow.cpp  watersourcewindow.h
translations/: Aqua-mixtura_de.ts  Aqua-mixtura_en.ts
